// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "height": "100%",
      "margin": 0,
      "padding": 0,
      "width": "100%",
    }
  }
>
  <RCTSafeAreaView
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "height": "100%",
        "margin": 0,
        "padding": 0,
        "width": "100%",
      }
    }
  >
    <Image
      source={1}
      style={
        {
          "aspectRatio": 2.7985865724381624,
          "flex": 0.25,
          "marginBottom": "10%",
          "marginTop": 20,
          "width": "100%",
        }
      }
    />
    <Text
      style={
        {
          "color": "white",
          "fontSize": 32,
          "fontWeight": "bold",
        }
      }
    >
      Waste Watcher
    </Text>
    <Text
      style={
        {
          "color": "white",
          "fontSize": 24,
          "marginBottom": "10%",
        }
      }
    >
      Track n' Reduce Food Waste
    </Text>
    <TextInput
      cursorColor="white"
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#fff"
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <TextInput
      cursorColor="white"
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#fff"
      secureTextEntry={true}
      selectionColor="white"
      style={
        [
          {
            "backgroundColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "fontSize": 15,
            "height": 50,
            "margin": 8,
            "paddingLeft": 15,
            "width": "85%",
          },
          {
            "color": "#fff",
          },
        ]
      }
    />
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 15,
            "fontWeight": "bold",
          }
        }
      >
        Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderColor": "rgba(255, 255, 255, 0.25)",
            "borderRadius": 7,
            "borderWidth": 3,
            "height": 50,
            "justifyContent": "space-evenly",
            "margin": 8,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
            "fontSize": 15,
            "fontWeight": "bold",
          }
        }
      >
        Bypass Log In
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 30,
            "justifyContent": "center",
            "marginTop": 3,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Forgot your login details? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Get help signing in.
        </Text>
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#fff",
          "fontSize": 16,
          "marginBottom": 15,
          "marginTop": 15,
        }
      }
    >
      OR
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "rgba(255, 255, 255, 0.25)",
          "borderRadius": 7,
          "flexDirection": "row",
          "fontSize": 15,
          "height": 50,
          "justifyContent": "center",
          "width": "85%",
        }
      }
    >
      <Text />
      <Text
        style={
          {
            "color": "white",
            "fontWeight": "bold",
            "paddingLeft": 8,
          }
        }
      >
        Sign in with Google
      </Text>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderRadius": 7,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 10,
            "paddingTop": 0,
            "width": "85%",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "white",
          }
        }
      >
        Dont have an account? 
        <Text
          style={
            {
              "fontWeight": "bold",
            }
          }
        >
          Sign up
        </Text>
      </Text>
    </View>
  </RCTSafeAreaView>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 2`] = `
<ViewManagerAdapter_ExpoLinearGradient
  colors={
    [
      4278216447,
      4278249075,
    ]
  }
  endPoint={
    [
      1,
      1,
    ]
  }
  startPoint={
    [
      0,
      0.2,
    ]
  }
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
          "flexDirection": "column",
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "flex": 1,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignSelf": "flex-start",
              "borderRadius": 14,
              "margin": 10,
              "marginTop": 40,
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 40,
              "paddingBottom": 20,
              "paddingLeft": 25,
              "paddingRight": 25,
              "paddingTop": 20,
            }
          }
        >
          ×
        </Text>
      </View>
      <Text
        style={
          {
            "alignItems": "center",
            "color": "white",
            "fontSize": 35,
            "justifyContent": "center",
          }
        }
      >
        Forgot Password?
      </Text>
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 15,
            "marginBottom": 15,
            "marginTop": 80,
            "width": "80%",
          }
        }
      >
        Please enter your email and we'll send you an email with a link to reset your password.
      </Text>
      <TextInput
        cursorColor="white"
        onChangeText={[Function]}
        onEndEditing={[Function]}
        placeholder="example@gmail.com"
        placeholderTextColor="#fff"
        selectionColor="white"
        style={
          [
            {
              "backgroundColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "fontSize": 15,
              "height": 50,
              "marginBottom": 8,
              "paddingLeft": 15,
              "width": "85%",
            },
            {
              "color": "#fff",
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "backgroundColor": "rgba(0,0,0,0)",
            },
            {
              "alignItems": "center",
              "borderColor": "rgba(255, 255, 255, 0.25)",
              "borderRadius": 7,
              "borderWidth": 3,
              "height": 50,
              "justifyContent": "space-evenly",
              "margin": 8,
              "width": "85%",
            },
          ]
        }
      >
        <Text
          style={
            {
              "color": "white",
              "fontSize": 15,
            }
          }
        >
          Reset Password
        </Text>
      </View>
    </View>
  </View>
</ViewManagerAdapter_ExpoLinearGradient>
`;

exports[`renders correctly 3`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "space-evenly",
      "marginBottom": "5%",
      "marginTop": "0%",
    }
  }
>
  <Text
    style={
      {
        "color": "#0066ff",
        "fontSize": 28,
        "fontWeight": "500",
      }
    }
  >
    Home
  </Text>
  <View
    style={
      {
        "alignItems": "flex-end",
        "backgroundColor": "#ebf3ff",
        "borderRadius": 10,
        "flexDirection": "row",
        "height": "27.5%",
        "justifyContent": "space-evenly",
        "padding": 15,
        "width": "90%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": "100",
          "justifyContent": "center",
          "width": "100",
        }
      }
    >
      <View
        style={
          {
            "height": 82,
            "padding": 0,
            "width": 82,
          }
        }
      >
        <RNSVGSvgView
          bbHeight="82"
          bbWidth="82"
          focusable={false}
          height={82}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 82,
                "width": 82,
              },
            ]
          }
          width={82}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    0,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="backgroundGradient"
                x1="0"
                x2="82"
                y1="82"
                y2="0"
              />
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    436218066,
                    1,
                    436218066,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="fillShadowGradientFrom"
                x1="0"
                x2="0"
                y1="0"
                y2="82"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                {
                  "brushRef": "backgroundGradient",
                  "type": 1,
                }
              }
              height="82"
              propList={
                [
                  "fill",
                ]
              }
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="0"
            />
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              matrix={
                [
                  1,
                  0,
                  -0,
                  1,
                  41,
                  41,
                ]
              }
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -30 A 30 30 0 1 1 -0.188494 -29.999408 L -0.188494 -29.999408 A 30 30 0 1 0 0 -30 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 855648466,
                      "type": 0,
                    }
                  }
                  strokeWidth="10"
                />
              </RNSVGGroup>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -30 A 30 30 0 1 1 -0 -30 L -0 -30 A 30 30 0 1 0 0 -30 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 2147494098,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="10"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Daily
      </Text>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Streak
      </Text>
    </View>
    <View>
      <View
        style={
          {
            "height": 125,
            "padding": 0,
            "width": 125,
          }
        }
      >
        <RNSVGSvgView
          bbHeight="125"
          bbWidth="125"
          focusable={false}
          height={125}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 125,
                "width": 125,
              },
            ]
          }
          width={125}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    0,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="backgroundGradient"
                x1="0"
                x2="125"
                y1="125"
                y2="0"
              />
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    436218066,
                    1,
                    436218066,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="fillShadowGradientFrom"
                x1="0"
                x2="0"
                y1="0"
                y2="125"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                {
                  "brushRef": "backgroundGradient",
                  "type": 1,
                }
              }
              height="125"
              propList={
                [
                  "fill",
                ]
              }
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="0"
            />
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              matrix={
                [
                  1,
                  0,
                  -0,
                  1,
                  62.5,
                  62.5,
                ]
              }
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -45 A 45 45 0 1 1 -0.282741 -44.999112 L -0.282741 -44.999112 A 45 45 0 1 0 0 -45 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 855648466,
                      "type": 0,
                    }
                  }
                  strokeWidth="13"
                />
              </RNSVGGroup>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -45 A 45 45 0 1 1 -0 -45 L -0 -45 A 45 45 0 1 0 0 -45 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 2147494098,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="13"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 17,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Weekly
      </Text>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 17,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Waste
      </Text>
    </View>
    <View
      style={
        {
          "alignItems": "center",
          "height": "100",
          "justifyContent": "center",
          "width": "100",
        }
      }
    >
      <View
        style={
          {
            "height": 82,
            "padding": 0,
            "width": 82,
          }
        }
      >
        <RNSVGSvgView
          bbHeight="82"
          bbWidth="82"
          focusable={false}
          height={82}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 82,
                "width": 82,
              },
            ]
          }
          width={82}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGDefs>
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    0,
                    1,
                    0,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="backgroundGradient"
                x1="0"
                x2="82"
                y1="82"
                y2="0"
              />
              <RNSVGLinearGradient
                gradient={
                  [
                    0,
                    436218066,
                    1,
                    436218066,
                  ]
                }
                gradientTransform={null}
                gradientUnits={1}
                name="fillShadowGradientFrom"
                x1="0"
                x2="0"
                y1="0"
                y2="82"
              />
            </RNSVGDefs>
            <RNSVGRect
              fill={
                {
                  "brushRef": "backgroundGradient",
                  "type": 1,
                }
              }
              height="82"
              propList={
                [
                  "fill",
                ]
              }
              rx="0"
              ry="0"
              width="100%"
              x="0"
              y="0"
            />
            <RNSVGGroup
              fill={
                {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              matrix={
                [
                  1,
                  0,
                  -0,
                  1,
                  41,
                  41,
                ]
              }
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -30 A 30 30 0 1 1 -0.188494 -29.999408 L -0.188494 -29.999408 A 30 30 0 1 0 0 -30 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 855648466,
                      "type": 0,
                    }
                  }
                  strokeWidth="10"
                />
              </RNSVGGroup>
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  d="M 0 -30 A 30 30 0 1 1 -0 -30 L -0 -30 A 30 30 0 1 0 0 -30 Z "
                  fill={
                    {
                      "payload": 4278190080,
                      "type": 0,
                    }
                  }
                  propList={
                    [
                      "stroke",
                      "strokeWidth",
                      "strokeLinecap",
                      "strokeLinejoin",
                    ]
                  }
                  stroke={
                    {
                      "payload": 2147494098,
                      "type": 0,
                    }
                  }
                  strokeLinecap={1}
                  strokeLinejoin={1}
                  strokeWidth="10"
                />
              </RNSVGGroup>
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Money
      </Text>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textAlign": "center",
          }
        }
      >
        Saved
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ebf3ff",
        "borderRadius": 10,
        "height": "60%",
        "justifyContent": "space-evenly",
        "width": "90%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#0066ff",
          "fontSize": 20,
          "fontWeight": "400",
        }
      }
    >
      Track Food Waste
    </Text>
    <View
      style={
        {
          "alignSelf": "center",
          "backgroundColor": "#ebf3ff",
          "borderColor": "#0066ff",
          "borderRadius": 10,
          "borderWidth": 3,
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "marginBottom": "7%",
          "paddingVertical": "1%",
          "textAlign": "center",
          "width": "60%",
        }
      }
    >
      <TextInput
        cursorColor="#0066ff"
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="00"
        placeholderTextColor="#0066ff"
        returnKeyType="done"
        style={
          {
            "backgroundColor": "#ebf3ff",
            "fontSize": 22,
            "fontWeight": "500",
          }
        }
        textAlign="center"
      >
        <Text
          style={
            {
              "color": "#0066ff",
              "fontSize": 30,
              "fontWeight": "500",
            }
          }
        />
      </TextInput>
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 30,
            "fontWeight": "500",
          }
        }
      >
        /
      </Text>
      <TextInput
        cursorColor="#0066ff"
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="0"
        placeholderTextColor="#0066ff"
        returnKeyType="done"
        style={
          {
            "backgroundColor": "#ebf3ff",
            "fontSize": 22,
            "fontWeight": "500",
          }
        }
        textAlign="center"
      >
        <Text
          style={
            {
              "color": "#0066ff",
              "fontSize": 30,
              "fontWeight": "500",
            }
          }
        />
      </TextInput>
    </View>
    <View
      style={
        {
          "alignSelf": "center",
          "borderColor": "#0066ff",
          "borderRadius": 10,
          "flexDirection": "row",
          "justifyContent": "flex-end",
          "marginBottom": "7%",
          "textAlign": "center",
          "width": "75%",
        }
      }
    >
      <TextInput
        cursorColor="#0066ff"
        keyboardType="numeric"
        onChangeText={[Function]}
        placeholder="0"
        placeholderTextColor="#0066ff"
        returnKeyType="done"
        style={
          {
            "alignSelf": "flex-start",
            "backgroundColor": "#ebf3ff",
            "borderColor": "#0066ff",
            "borderRadius": 10,
            "borderWidth": 3,
            "fontSize": 20,
            "fontWeight": "bold",
            "paddingVertical": "3%",
            "width": "65%",
          }
        }
        textAlign="center"
      >
        <Text
          style={
            {
              "alignSelf": "center",
              "color": "#0066ff",
              "fontSize": 20,
              "fontWeight": "bold",
              "textAlign": "center",
            }
          }
        />
      </TextInput>
      <View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignSelf": "flex-end",
              "backgroundColor": "#ebf3ff",
              "borderColor": "#0066ff",
              "borderRadius": 10,
              "borderWidth": 3,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "opacity": 1,
              "paddingHorizontal": 20,
              "paddingVertical": "3%",
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontFamily": undefined,
                },
                {
                  "alignSelf": "center",
                  "color": "#0066ff",
                  "fontSize": 20,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
              ]
            }
          >
            lbs
          </Text>
          <Image
            resizeMode="contain"
            source={1}
            style={
              {
                "height": 20,
                "width": 20,
              }
            }
          />
        </View>
      </View>
    </View>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignSelf": "center",
            "backgroundColor": "#ebf3ff",
            "borderColor": "#0066ff",
            "borderRadius": 10,
            "borderWidth": 3,
            "flexDirection": "row",
            "justifyContent": "space-between",
            "marginBottom": "7%",
            "opacity": 1,
            "paddingHorizontal": 20,
            "paddingVertical": 12,
            "textAlign": "center",
            "width": "75%",
          }
        }
      >
        <Text
          style={
            [
              {
                "fontFamily": undefined,
              },
              {
                "alignSelf": "center",
                "color": "#0066ff",
                "fontSize": 20,
                "fontWeight": "bold",
                "textAlign": "center",
              },
            ]
          }
        >
          Produce
        </Text>
        <Image
          resizeMode="contain"
          source={1}
          style={
            {
              "height": 20,
              "width": 20,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        fillColor="#0066ff"
        focusable={true}
        innerIconStyle={
          {
            "borderWidth": 2,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size={22}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
            {
              "backgroundColor": "white",
            },
          ]
        }
        text="In-Home"
        textStyle={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textDecorationLine": "none",
          }
        }
        unfillColor="white"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 11,
              "height": 22,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
              ],
              "width": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderColor": "#0066ff",
                  "borderRadius": 11,
                  "borderWidth": 1,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderWidth": 2,
                },
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "marginLeft": 16,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#757575",
                  "fontSize": 16,
                  "textDecorationLine": "none",
                },
                {
                  "color": "#0066ff",
                  "fontSize": 15,
                  "fontWeight": "500",
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            In-Home
          </Text>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        fillColor="#0066ff"
        focusable={true}
        innerIconStyle={
          {
            "borderWidth": 2,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size={22}
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
            },
            {
              "backgroundColor": "white",
            },
          ]
        }
        text="Edible"
        textStyle={
          {
            "color": "#0066ff",
            "fontSize": 15,
            "fontWeight": "500",
            "textDecorationLine": "none",
          }
        }
        unfillColor="white"
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 11,
              "height": 22,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 1,
                },
              ],
              "width": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderColor": "#0066ff",
                  "borderRadius": 11,
                  "borderWidth": 1,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderWidth": 2,
                },
              ]
            }
          />
        </View>
        <View
          style={
            [
              {
                "marginLeft": 16,
              },
              undefined,
            ]
          }
        >
          <Text
            style={
              [
                {
                  "color": "#757575",
                  "fontSize": 16,
                  "textDecorationLine": "none",
                },
                {
                  "color": "#0066ff",
                  "fontSize": 15,
                  "fontWeight": "500",
                  "textDecorationLine": "none",
                },
              ]
            }
          >
            Edible
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderRadius": 10,
          "justifyContent": "center",
          "padding": 10,
          "width": "40%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#0066ff",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Submit
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 4`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 0,
        "elevation": 10,
        "height": "20%",
        "justifyContent": "center",
        "marginBottom": 20,
        "marginTop": "0%",
        "shadowColor": "#0066ff",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 8,
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "justifyContent": "center",
          "marginTop": "2.5%",
        }
      }
    >
      <Image
        source={1}
        style={
          {
            "height": 50,
            "width": 50,
          }
        }
      />
    </View>
    <Text
      style={
        {
          "fontSize": 20,
          "fontWeight": "bold",
          "marginVertical": "1%",
        }
      }
    >
      Frank Pug
    </Text>
    <Text
      style={
        {
          "color": "#474747",
          "fontSize": 16,
          "marginBottom": "5%",
        }
      }
    >
      frankdapug
    </Text>
  </View>
  <View
    style={
      {
        "flex": 1,
        "height": "100%",
        "marginTop": "5%",
        "width": "100%",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Notifications
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          No new messages
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Friends
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          View and invite friends
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Streak
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Track daily, earn rewards
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          My Badges
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Earn badges, complete goals
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Settings
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Edit your account info
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "backgroundColor": "rgba(0,0,0,0)",
          },
          {
            "alignItems": "center",
            "borderBottomColor": "rgba(255, 255, 255, 0.75)",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "height": "13%",
            "width": "100%",
          },
        ]
      }
    >
      <View
        style={
          {
            "marginLeft": "7.5%",
            "marginRight": "2%",
          }
        }
      >
        <Image
          source={1}
          style={
            {
              "height": 35,
              "width": 35,
            }
          }
        />
      </View>
      <View
        style={
          {
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": "3%",
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 19,
              "fontWeight": "bold",
              "marginBottom": 1,
            }
          }
        >
          Refer a Friend
        </Text>
        <Text
          style={
            {
              "color": "#474747",
              "fontSize": 13,
              "marginRight": "10%",
            }
          }
        >
          Connect and track together
        </Text>
      </View>
    </View>
  </View>
</View>
`;
